# burn_subs

./: .gitignore  CLAUDE.md  README.md  convert_wsubs.ipynb  pyproject.toml
src/burn_subs/: __init__.py  cli.py  core.py  ffmpeg.py  gui.py
tests/: conftest.py  test_cli.py  test_cli_expand_inputs.py  test_core.py  test_ffmpeg_helpers.py
